# ytdownloader

./: .gitignore  LICENSE  README.md  commitmsg.txt  prompt.md  pyproject.toml
docs/: configuration.md  dedupe-plan.md  installation.md  logging.md  pending-tasks.md  todos.md  usage.md
scripts/: install-linux.sh
src/ytdlp_wrapper/: __init__.py  cli.py  config.py  downloader.py  metadata_cache.py  normalize.py  pending.py  progress.py  sponsorblock_local.py  utils.py
src/ytdlp_wrapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_download_normalization.py  test_m3u.py  test_metadata_cache.py  test_normalize.py  test_pending.py  test_sponsorblock.py  test_thumbnail.py  test_utils.py
